--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "author": "joeyklee",
+  "author": "evaphilips",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^7.0.0",
